港美股项目构建

--- a/app/global.config.json
+++ b/app/global.config.json
@@ -4,12 +4,14 @@
     "jquery2/jquery.min.js",
     "underscore/underscore-min.js"
   ],
-
+  "vueScript":[
+    "vue/dist/vue.min.js"
+  ],
   "mobile":[
 
   ],
   "baseStyle": [
-
+    "vux/dist/vux.css"
   ],
   "cdn": ""
 }
