--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,10 @@
   "devDependencies": {
     "backbone": "^1.3.3",
     "jquery": "^3.1.0",
-    "jquery2": "^2.0.0"
+    "jquery2": "^2.0.0",
+    "vux": "^0.1.2",
+    "vue-router": "^0.7.13",
+    "vue-resource": "^0.9.3",
+    "vue": "^1.0.26"
   }
 }
