--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "vux": "^0.1.2",
     "vue-router": "^0.7.13",
     "vue-resource": "^0.9.3",
-    "vue": "^1.0.26"
+    "vue": "^1.0.26",
+    "weui": "^0.4.3",
+    "normalize-css": "^4.2.0"
   }
 }
